--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @powitanie %></h1>
 <script type="text/javascript">
 tinymce.init({
-    selector: "textarea"
+    selector: "textarea.tinymce"
  });
 </script>
-<textarea name="" id="" cols="30" rows="10" class="tinymce"></textarea>
+<textarea name="" id="" class="tinymce"></textarea>
