--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,7 +1,5 @@
+<% content_for :admin_nav do %>
+  <div>menu</div>
+<% end %>
 <h1><%= @powitanie %></h1>
-<script type="text/javascript">
-tinymce.init({
-    selector: "textarea.tinymce"
- });
-</script>
 <textarea name="" id="" class="tinymce"></textarea>
