--- a/app/views/admin/pages/new.html.erb
+++ b/app/views/admin/pages/new.html.erb
@@ -5,7 +5,7 @@
 <%= form_for :page, url: admin_pages_path do |f| %>
   <p>
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :class => "form-control" %>
   </p>
  
   <p>
@@ -14,6 +14,6 @@
   </p>
  
   <p>
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-success pull-right" %>
   </p>
 <% end %>
