Dodanie wstępnej autoryzacji

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -8,6 +8,7 @@
   </div>
 <% end %>
 <h1><%= @powitanie %></h1>
+<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 <% @pages.each do |page| %>
     <div>
 	<span>
